--- a/Code/WCFService/Web.config
+++ b/Code/WCFService/Web.config
@@ -12,10 +12,10 @@
   <!--服务采用固定上下文时配置-->
   <U9Contexts defaultEnterpriseID="004" multiEnterprise="false">
     <U9Context enterpriseID="002" enterpriseName="GX" orgID="1001511010010246" orgCode="2010000"
-               orgName="福建广鑫钢绳索具贸易有限公司" userID="1001511090021123"
+               orgName="福建XXXX贸易有限公司" userID="1001511090021123"
                userCode="admin" userName="admin" culture="zh-CN" supportCultureNameList="zh-CN" />
     <U9Context enterpriseID="004" enterpriseName="FC" orgID="1001810240000055" orgCode="130101"
-               orgName="福建福船一帆新能源装备制造有限公司" userID="1001810240000281"
+               orgName="福建XXXX制造有限公司" userID="1001810240000281"
                userCode="admin" userName="admin" culture="zh-CN" supportCultureNameList="zh-CN" />
   </U9Contexts>
   <U9Actions>
