change some file

--- a/Code/UFIDA.U9.Cust.Pub.WS.Base/UFIDA.U9.Cust.Pub.WS.Base.csproj
+++ b/Code/UFIDA.U9.Cust.Pub.WS.Base/UFIDA.U9.Cust.Pub.WS.Base.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Behavior\Endpoint\Log4NetEndpointBehavior.cs" />
     <Compile Include="Behavior\WebHttp\ExtendErrorHandler.cs" />
     <Compile Include="Services\ErrorLogHttpModule.cs" />
+    <Compile Include="Services\ServiceRedirector.cs" />
     <Compile Include="Utils\ConfigurationHelper.cs" />
     <Compile Include="Utils\ServiceConstant.cs" />
     <Compile Include="Interfaces\IReturnMessage.cs" />
