--- a/Code/WCFService/Web-All.config
+++ b/Code/WCFService/Web-All.config
@@ -3,7 +3,7 @@
 <configuration>
   <configSections>
     <section name="U9Contexts"
-             type="UFIDA.U9.Cust.Pub.WS.U9Context.Configuration.U9ActionSectionGroup,UFIDA.U9.Cust.Pub.WS.U9Context" />
+             type="UFIDA.U9.Cust.Pub.WS.U9Context.Configuration.U9ContextSectionGroup,UFIDA.U9.Cust.Pub.WS.U9Context" />
     <section name="U9Actions"
              type="UFIDA.U9.Cust.Pub.WS.U9Action.Configuration.U9ActionSectionGroup,UFIDA.U9.Cust.Pub.WS.U9Action" />
     <section name="TokenConfiguration"
