--- a/Code/WCFService/Web-All.config
+++ b/Code/WCFService/Web-All.config
@@ -17,16 +17,10 @@
   </U9Contexts>
   <U9Actions>
     <!--执行顺序[Before:SetU9ContextByToken->TwoStepDBLog AfterDo:TwoStepDBLog->SetU9ContextByToken]-->
-    <U9Action name="SetU9ContextByToken"
-              type="UFIDA.U9.Cust.Pub.WS.U9Action.Token.SetU9ContextByTokenBehaviorAction,UFIDA.U9.Cust.Pub.WS.U9Action.Token" />
-    <U9Action name="TwoStepDBLog"
-              type="UFIDA.U9.Cust.Pub.WS.DBLog.Action.TwoStepDBLogBehaviorAction,UFIDA.U9.Cust.Pub.WS.U9Action.DBLog" />
-    <!--
     <U9Action name="SetU9ContextBySingleUser"
               type="UFIDA.U9.Cust.Pub.WS.U9Action.Action.SetU9ContextBySingleUserBehaviorAction,UFIDA.U9.Cust.Pub.WS.U9Action" />
     <U9Action name="TwoStepDBLog"
               type="UFIDA.U9.Cust.Pub.WS.DBLog.Action.TwoStepDBLogBehaviorAction,UFIDA.U9.Cust.Pub.WS.U9Action.DBLog" />
-    -->
     <!--
     <U9Action name="SetU9ContextByToken"
               type="UFIDA.U9.Cust.Pub.WS.U9Action.Token.SetU9ContextByTokenBehaviorAction,UFIDA.U9.Cust.Pub.WS.U9Action.Token" />
@@ -34,12 +28,12 @@
               type="UFIDA.U9.Cust.Pub.WS.DBLog.Action.TwoStepDBLogBehaviorAction,UFIDA.U9.Cust.Pub.WS.U9Action.DBLog" />
      -->
   </U9Actions>
-  <TokenConfiguration enabled="true" defaultProvider="DBProvider" clearInvalidTokenSeconds="60">
+  <TokenConfiguration enabled="true" defaultProvider="DBProvider" clearInvalidTokenSeconds="1200">
     <providers>
       <!--采用内存的方式缓存Token,适用单一应用服务器,iis重启后清空所有Token，自动清理超时Token-->
       <add name="MemoryProvider"
            type="UFIDA.U9.Cust.Pub.WS.Token.MemoryProvider.WSTokenMemoryProvider, UFIDA.U9.Cust.Pub.WS.Token.MemoryProvider"
-           timeout="60" maxSizePerUser="-1" />
+           tokenSize="200" timeout="1200" maxSizePerUser="-1" />
       <!--采用数据库的方式缓存Token,适用多个应用服务器共享Token,自动清理超时Token需配置调度-->
       <add name="DBProvider"
            type="UFIDA.U9.Cust.Pub.WS.Token.DBProvider.WSTokenDBProvider, UFIDA.U9.Cust.Pub.WS.Token.DBProvider"
@@ -81,7 +75,8 @@
                    faultExceptionEnabled="false" />
           <NewtonsoftJsonBehavior />
           <Log4NetEndpointBehavior />
-          <SetU9ContextBySingleUserEndpointBehavior />
+          <TokenValidationEndpointBehavior />
+          <U9ActionEndpointBehavior />
           <!--单一用户上下文.无数据库日志
           <SetU9ContextBySingleUserEndpointBehavior />
           -->
@@ -142,7 +137,7 @@
         若要在调试过程中浏览 Web 应用程序根目录，请将下面的值设置为 True。
         在部署之前将该值设置为 False 可避免泄露 Web 应用程序文件夹信息。
       -->
-    <directoryBrowse enabled="true" />
+    <directoryBrowse enabled="false" />
   </system.webServer>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -152,7 +147,7 @@
     <add key="JsonDateTimeFormat" value="yyyy-MM-dd HH:mm:ss" />
     <!--返回Json以BOM开始-->
     <add key="ResponeJsonNoStartsWithBOM" value="true" />
-    <!--返回Json格式化方式:none/Indented-->
+    <!--返回Json格式化方式:none(不格式)/Indented(格式化)-->
     <add key="ResponeJsonFormatting" value="none" />
   </appSettings>
 </configuration>
