--- a/Code/WCFService/Web-Simple.config
+++ b/Code/WCFService/Web-Simple.config
@@ -8,7 +8,7 @@
   <!--服务采用固定上下文时配置-->
   <U9Contexts defaultEnterpriseID="004" multiEnterprise="false">
     <U9Context enterpriseID="004" enterpriseName="FC" orgID="1001810240000055" orgCode="130101"
-               orgName="XXXX制造有限公司" userID="1001810240000281"
+               orgName="XXXX公司" userID="1001810240000281"
                userCode="admin" userName="admin" culture="zh-CN" supportCultureNameList="zh-CN" />
   </U9Contexts>
   <system.web>
@@ -76,7 +76,7 @@
         若要在调试过程中浏览 Web 应用程序根目录，请将下面的值设置为 True。
         在部署之前将该值设置为 False 可避免泄露 Web 应用程序文件夹信息。
       -->
-    <directoryBrowse enabled="true" />
+    <directoryBrowse enabled="false" />
   </system.webServer>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -85,8 +85,8 @@
     <!--Json日期格式-->
     <add key="JsonDateTimeFormat" value="yyyy-MM-dd HH:mm:ss" />
     <!--返回Json以BOM开始-->
-    <add key="ResponeJsonNoStartsWithBOM" value="true" />
-    <!--返回Json格式化方式:none/Indented-->
+    <add key="ResponeJsonNoStartsWithBOM" value="false" />
+    <!--返回Json格式化方式:none(不格式)/Indented(格式化)-->
     <add key="ResponeJsonFormatting" value="none" />
   </appSettings>
 </configuration>
