--- a/Code/UFIDA.U9.Cust.Pub.WS.CommService/UFIDA.U9.Cust.Pub.WS.CommService.csproj
+++ b/Code/UFIDA.U9.Cust.Pub.WS.CommService/UFIDA.U9.Cust.Pub.WS.CommService.csproj
@@ -61,8 +61,8 @@
     <Compile Include="Json\ProxyBaseContractResolver.cs" />
     <Compile Include="Utils\CommServiceException.cs" />
     <Compile Include="Interfaces\ICommService.cs" />
-    <Compile Include="Models\ProxyRequestObject.cs" />
-    <Compile Include="Models\ProxyRequestType.cs" />
+    <Compile Include="Models\RequestProxyObject.cs" />
+    <Compile Include="Models\RequestProxyType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CommService.cs" />
     <Compile Include="Utils\CommServiceJsonHelper.cs" />
