--- a/Code/WCFService/Web-All.config
+++ b/Code/WCFService/Web-All.config
@@ -51,10 +51,10 @@
                   bindingConfiguration="restWebHttpBinding"
                   contract="UFIDA.U9.Cust.Pub.WS.Token.Interfaces.IAuthTokenService" />
       </service>
-      <service name="UFIDA.U9.Cust.Pub.WS.CommService.Services.CommService">
+      <service name="UFIDA.U9.Cust.Pub.WS.ProxyService.Services.ProxyService">
         <endpoint address="" behaviorConfiguration="DataServiceEndPointBehavior" binding="webHttpBinding"
                   bindingConfiguration="restWebHttpBinding"
-                  contract="UFIDA.U9.Cust.Pub.WS.CommService.Interfaces.ICommService" />
+                  contract="UFIDA.U9.Cust.Pub.WS.ProxyService.Interfaces.IProxyService" />
       </service>
       <service name="UFIDA.U9.Cust.Pub.WS.TestService.Services.TestService">
         <endpoint address="" behaviorConfiguration="DataServiceEndPointBehavior" binding="webHttpBinding"
