--- a/Code/WCFService/Web-Simple.config
+++ b/Code/WCFService/Web-Simple.config
@@ -17,10 +17,10 @@
   </system.web>
   <system.serviceModel>
     <services>
-      <service name="UFIDA.U9.Cust.Pub.WS.CommService.Services.CommService">
+      <service name="UFIDA.U9.Cust.Pub.WS.ProxyService.Services.ProxyService">
         <endpoint address="" behaviorConfiguration="DataServiceEndPointBehavior" binding="webHttpBinding"
                   bindingConfiguration="restWebHttpBinding"
-                  contract="UFIDA.U9.Cust.Pub.WS.CommService.Interfaces.ICommService" />
+                  contract="UFIDA.U9.Cust.Pub.WS.ProxyService.Interfaces.IProxyService" />
       </service>
       <service name="UFIDA.U9.Cust.Pub.WS.TestService.Services.TestService">
         <endpoint address="" behaviorConfiguration="DataServiceEndPointBehavior" binding="webHttpBinding"
