--- a/Code/UFIDA.U9.Cust.Pub.WS.ProxyService/UFIDA.U9.Cust.Pub.WS.ProxyService.csproj
+++ b/Code/UFIDA.U9.Cust.Pub.WS.ProxyService/UFIDA.U9.Cust.Pub.WS.ProxyService.csproj
@@ -56,6 +56,9 @@
     <Reference Include="UFSoft.UBF.Business">
       <HintPath>..\..\..\..\..\..\Temp\Codes\TestProxy\TestProxy\bin\Debug\UBFBin\UFSoft.UBF.Business.dll</HintPath>
     </Reference>
+    <Reference Include="UFSoft.UBF.PL">
+      <HintPath>..\..\..\..\..\Temp\Codes\TestProxy\TestProxy\bin\Debug\UBFBin\UFSoft.UBF.PL.dll</HintPath>
+    </Reference>
     <Reference Include="UFSoft.UBF.Sys.Database, Version=25.5401.28777.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Temp\Codes\TestProxy\TestProxy\bin\Debug\UBFBin\UFSoft.UBF.Sys.Database.dll</HintPath>
