--- a/Code/WCFService/Web-All.config
+++ b/Code/WCFService/Web-All.config
@@ -122,6 +122,8 @@
              type="UFIDA.U9.Cust.Pub.WS.Base.Behavior.Endpoint.Log4NetEndpointBehaviorExtension,UFIDA.U9.Cust.Pub.WS.Base, Version=1.0.0.0, Culture=neutral" />
         <add name="SetU9ContextBySingleUserEndpointBehavior"
              type="UFIDA.U9.Cust.Pub.WS.U9Context.Behavior.Endpoint.SetU9ContextBySingleUserEndpointBehaviorExtension,UFIDA.U9.Cust.Pub.WS.U9Context, Version=1.0.0.0, Culture=neutral" />
+        <add name="SetU9ContextByAuthEndpointBehavior"
+             type="UFIDA.U9.Cust.Pub.WS.U9Context.Behavior.Endpoint.SetU9ContextByAuthEndpointBehaviorExtension,UFIDA.U9.Cust.Pub.WS.U9Context, Version=1.0.0.0, Culture=neutral" />
         <add name="TokenValidationEndpointBehavior"
              type="UFIDA.U9.Cust.Pub.WS.Token.Behavior.Endpoint.TokenValidationEndpointBehaviorExtension,UFIDA.U9.Cust.Pub.WS.Token, Version=1.0.0.0, Culture=neutral" />
         <add name="SetU9ContextByTokenEndpointBehavior"
