--- a/Code/WCFService/Web-ProxyService.config
+++ b/Code/WCFService/Web-ProxyService.config
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
-  <configSections>
-    <section name="U9Contexts"
-             type="UFIDA.U9.Cust.Pub.WS.U9Context.Configuration.U9ContextSectionGroup,UFIDA.U9.Cust.Pub.WS.U9Context" />
-  </configSections>
-  <!--服务采用固定上下文时配置-->
-  <U9Contexts defaultEnterpriseID="004" multiEnterprise="false">
-    <U9Context enterpriseID="004" enterpriseName="FC" orgID="1001810240000055" orgCode="130101"
-               orgName="XXXX公司" userID="1001810240000281"
-               userCode="admin" userName="admin" culture="zh-CN" supportCultureNameList="zh-CN" />
-  </U9Contexts>
+  <configSections></configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -22,6 +13,11 @@
                   bindingConfiguration="restWebHttpBinding"
                   contract="UFIDA.U9.Cust.Pub.WS.ProxyService.Interfaces.IProxyService" />
       </service>
+      <service name="UFIDA.U9.Cust.Pub.WS.DebugService.Services.DebugService">
+        <endpoint address="" behaviorConfiguration="DataServiceEndPointBehavior" binding="webHttpBinding"
+                  bindingConfiguration="restWebHttpBinding"
+                  contract="UFIDA.U9.Cust.Pub.WS.DebugService.Interfaces.IDebugService" />
+      </service>
     </services>
     <behaviors>
       <endpointBehaviors>
@@ -29,7 +25,7 @@
           <webHttp helpEnabled="false" defaultBodyStyle="Bare" defaultOutgoingResponseFormat="Json"
                    faultExceptionEnabled="false" />
           <NewtonsoftJsonBehavior />
-          <SetU9ContextBySingleUserEndpointBehavior />
+          <SetU9ContextByAuthEndpointBehavior />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
@@ -59,8 +55,8 @@
              type="UFIDA.U9.Cust.Pub.WS.Base.Behavior.WebHttp.NewtonsoftJsonBehaviorExtension,UFIDA.U9.Cust.Pub.WS.Base,Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
         <add name="Log4NetEndpointBehavior"
              type="UFIDA.U9.Cust.Pub.WS.Base.Behavior.Endpoint.Log4NetEndpointBehaviorExtension,UFIDA.U9.Cust.Pub.WS.Base, Version=1.0.0.0, Culture=neutral" />
-        <add name="SetU9ContextBySingleUserEndpointBehavior"
-             type="UFIDA.U9.Cust.Pub.WS.U9Context.Behavior.Endpoint.SetU9ContextBySingleUserEndpointBehaviorExtension,UFIDA.U9.Cust.Pub.WS.U9Context, Version=1.0.0.0, Culture=neutral" />
+        <add name="SetU9ContextByAuthEndpointBehavior"
+             type="UFIDA.U9.Cust.Pub.WS.U9Context.Behavior.Endpoint.SetU9ContextByAuthEndpointBehaviorExtension,UFIDA.U9.Cust.Pub.WS.U9Context, Version=1.0.0.0, Culture=neutral" />
       </behaviorExtensions>
     </extensions>
   </system.serviceModel>
@@ -82,5 +78,8 @@
     <add key="ResponeJsonNoStartsWithBOM" value="false" />
     <!--返回Json格式化方式:none(不格式)/Indented(格式化)-->
     <add key="ResponeJsonFormatting" value="none" />
+    <!--返回Json是否包含堆栈信息-->
+    <add key="ResponeMessageIncludeStackInfo" value="true" />
+    
   </appSettings>
 </configuration>
