--- a/Code/UFIDA.U9.Cust.Pub.WS.Context/UFIDA.U9.Cust.Pub.WS.U9Context.csproj
+++ b/Code/UFIDA.U9.Cust.Pub.WS.Context/UFIDA.U9.Cust.Pub.WS.U9Context.csproj
@@ -62,15 +62,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auth\BasicAuth.cs" />
+    <Compile Include="Behavior\Endpoint\SetU9ContextByAuthEndpointBehavior.cs" />
     <Compile Include="Behavior\Endpoint\SetU9ContextBySingleUserEndpointBehavior.cs" />
+    <Compile Include="Behavior\Endpoint\SetU9ContextByAuthEndpointBehaviorExtension.cs" />
     <Compile Include="Behavior\Endpoint\SetU9ContextBySingleUserEndpointBehaviorExtension.cs" />
     <Compile Include="Configuration\U9ContextSection.cs" />
     <Compile Include="Configuration\U9ContextSectionCollection.cs" />
     <Compile Include="Configuration\U9ContextSectionGroup.cs" />
     <Compile Include="ContextConstant.cs" />
+    <Compile Include="ContextHelper.cs" />
     <Compile Include="ContextInfo.cs" />
     <Compile Include="ContextInfoManager.cs" />
     <Compile Include="ContextObject.cs" />
+    <Compile Include="Auth\Credentials.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="U9ContextException.cs" />
   </ItemGroup>
